--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </section>
 
 
-
+    <!-- Boxes B.Tech -->
     <div>
         <h1 class="display-4 text-center text-dark mt-2">Notes.SIT- B.Tech</h1>
-        <!-- Boxes Btech -->
+        <!-- Boxes Btech 1sty -->
         <section class="p-5" id="btech">
             <div class="container">
                 <div class="row text-center g-4">
@@ -151,8 +151,7 @@
                     </div>
                 </div>
         </section>
-
-
+        <!-- Boxes Btech 2ndy -->
         <section class=" p-5 " id="btech">
             <div class="container">
                 <div class="row text-center g-4">
@@ -385,9 +384,7 @@
                 </div>
         </section>
 
-
-
-        <!-- Boxes Btech -->
+        <!-- Boxes Btech 3rdy -->
         <section class="p-5" id="btech">
             <div class="container">
                 <div class="row text-center g-4">
@@ -471,7 +468,7 @@
                 </div>
         </section>
 
-        <!-- Boxes Btech -->
+        <!-- Boxes Btech 4th y -->
         <section class=" p-5" id="btech">
             <div class="container">
                 <div class="row text-center g-4">
@@ -557,7 +554,7 @@
         </section>
         </div>
 
-
+        <!-- Boxes MCA -->
         <div>
             <h1 class="display-4 text-center mt-2">Notes.SIT- MCA</h1>
             <!-- Boxes MCA -->
