--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#btech" class="nav-link"> B.Tech</a>
+                        <a href="#btech1" class="nav-link"> B.Tech 1st Year</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#mca" class="nav-link"> MCA</a>
+                        <a href="#btech2" class="nav-link"> B.Tech 2nd Year</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#btech3" class="nav-link"> B.Tech 3rd Year</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#btech4" class="nav-link"> B.Tech 4th Year</a>
                     </li>
 
 
@@ -67,7 +73,7 @@
     <div>
         <h1 class="display-4 text-center text-dark mt-2">Notes.SIT- B.Tech</h1>
         <!-- Boxes Btech 1sty -->
-        <section class="p-5" id="btech">
+        <section class="p-5" id="btech1">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 1st year</h2>
@@ -109,7 +115,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md ">
+                    <div class="col-md">
                         <div class="card bg-dark text-light w-100 h-100 ">
                             <div class="card-body text-center">
                                 <div class="h1 mb-3">
@@ -152,7 +158,7 @@
                 </div>
         </section>
         <!-- Boxes Btech 2ndy -->
-        <section class=" p-5 " id="btech">
+        <section class=" p-5 " id="btech2">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary  ">B.TECH 2nd year</h2>
@@ -385,7 +391,7 @@
         </section>
 
         <!-- Boxes Btech 3rdy -->
-        <section class="p-5" id="btech">
+        <section class="p-5" id="btech3">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 3rd year</h2>
@@ -469,7 +475,7 @@
         </section>
 
         <!-- Boxes Btech 4th y -->
-        <section class=" p-5" id="btech">
+        <section class=" p-5" id="btech4">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 4th year</h2>
@@ -554,149 +560,6 @@
         </section>
         </div>
 
-        <!-- Boxes MCA -->
-        <div>
-            <h1 class="display-4 text-center mt-2">Notes.SIT- MCA</h1>
-            <!-- Boxes MCA -->
-
-            <section class="p-5" id="mca">
-                <div class="container">
-                    <div class="row text-center g-4">
-                        <h2 class="text-center text-secondary ">MCA 1st YEAR</h2>
-
-                        <div class="col-md">
-                            <div class="card bg-dark text-light w-100 h-100">
-                                <div class="card-body text-center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">1st YEAR</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Training a Multinomial Naive Bayes Model to classify movie reviews as good and bad</h6>
-                                    <p class="card-text"> Using the bag of words model to make a NLP Pipeline. Implementing stopwords removal and stemming to clean the data. Using Laplace smoothing to solve the problem of zero probability and further enhance the model. Technologies
-                                        : Natural Language Processing Toolkit,scikit-learn content.
-                                    </p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md">
-                            <div class="card bg-light text-dark w-100 h-100">
-                                <div class="card-body tex=center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">CLASSIFYING MNIST DIGIT DATASET</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Trained a Convolutional Neural Network using keras to classify the handwritten digits(0-9)</h6>
-                                    <p class="card-text"> Used Max Pooling to further enhance the perception of every ﬁlter. Made use of the dropout technique to reduce overﬁtting and to increase the accuracy Technologies:Keras, Google Colab</p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-            <section class="p-5" id="mca">
-                <div class="container">
-                    <div class="row text-center g-4">
-                        <h2 class="text-center text-secondary ">MCA 2nd YEAR</h2>
-
-                        <div class="col-md">
-                            <div class="card bg-light text-dark w-100 h-100">
-                                <div class="card-body text-center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">1st YEAR</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Training a Multinomial Naive Bayes Model to classify movie reviews as good and bad</h6>
-                                    <p class="card-text"> Using the bag of words model to make a NLP Pipeline. Implementing stopwords removal and stemming to clean the data. Using Laplace smoothing to solve the problem of zero probability and further enhance the model. Technologies
-                                        : Natural Language Processing Toolkit,scikit-learn content.
-                                    </p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md">
-                            <div class="card bg-dark text-light w-100 h-100">
-                                <div class="card-body tex=center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">CLASSIFYING MNIST DIGIT DATASET</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Trained a Convolutional Neural Network using keras to classify the handwritten digits(0-9)</h6>
-                                    <p class="card-text"> Used Max Pooling to further enhance the perception of every ﬁlter. Made use of the dropout technique to reduce overﬁtting and to increase the accuracy Technologies:Keras, Google Colab</p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="p-5" id="mca">
-                <div class="container">
-                    <div class="row text-center g-4">
-                        <h2 class="text-center text-secondary ">MCA 3rd YEAR</h2>
-
-                        <div class="col-md">
-                            <div class="card bg-dark text-light w-100 h-100">
-                                <div class="card-body text-center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">1st YEAR</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Training a Multinomial Naive Bayes Model to classify movie reviews as good and bad</h6>
-                                    <p class="card-text"> Using the bag of words model to make a NLP Pipeline. Implementing stopwords removal and stemming to clean the data. Using Laplace smoothing to solve the problem of zero probability and further enhance the model. Technologies
-                                        : Natural Language Processing Toolkit,scikit-learn content.
-                                    </p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md">
-                            <div class="card bg-light text-dark w-100 h-100">
-                                <div class="card-body tex=center">
-                                    <div class="h1 mb-3">
-                                        <i class="bi bi-journal-text"></i>
-                                    </div>
-                                    <h5 class="card-title">CLASSIFYING MNIST DIGIT DATASET</h5>
-                                    <h6 class="card-subtitle mb-2 text-bold text-muted">• Trained a Convolutional Neural Network using keras to classify the handwritten digits(0-9)</h6>
-                                    <p class="card-text"> Used Max Pooling to further enhance the perception of every ﬁlter. Made use of the dropout technique to reduce overﬁtting and to increase the accuracy Technologies:Keras, Google Colab</p>
-
-                                </div>
-                                <div class="d-flex flex-row justify-content-center mt-auto mb-4">
-                                    <a href="https://drive.google.com/drive/folders/1wxV9f601dHkqZXwgGDhiJpU68UMn3MRf?usp=sharing" class="btn btn-dark ">Resources</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-
-        </div>
 
         <footer class="p-5 bg-dark text-white text-center position-relative" id="learnaboutus">
             <div class=" container ">
