updated minor details

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="img-home">
                     <h1>Grab your <span class="text-secondary">NOTES</span> here </h1>
-                    <p class="lead my-4">
+                    <p class="lead my-4 mx-2">
                         Hi, welcome to Notes.SIT. This website has been created by students of Silicon Institute of Technology, Bhubaneswar for the student community to help with notes for free!
                     </p>
 
@@ -122,7 +122,7 @@
                                     <i class="bi bi-journal-text"></i>
                                 </div>
                                 <h5 class="card-title">2nd SEM</h5>
-                                <h6 class="card-subtitle mb-2 text-bold text-muted">• Lorem ipsum dolor sit</h6>
+                                <h6 class="card-subtitle mb-2 text-bold text-muted">• Theory</h6>
                                 <div class="grid">
                                     <div class="row">
                                         <div class="col-xl-12"> Engineering Mathematics - II </div>
