--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 
     <!-- Boxes B.Tech -->
-    <div>
+    <div class="container-fluid ">
         <h1 class="display-4 text-center text-dark mt-2">Notes.SIT- B.Tech</h1>
         <!-- Boxes Btech 1sty -->
-        <section class="p-5" id="btech1">
+        <section class=" " id="btech1">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 1st year</h2>
@@ -156,9 +156,10 @@
 
                     </div>
                 </div>
+            </div>
         </section>
         <!-- Boxes Btech 2ndy -->
-        <section class=" p-5 " id="btech2">
+        <section class="  " id="btech2">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary  ">B.TECH 2nd year</h2>
@@ -388,10 +389,11 @@
 
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- Boxes Btech 3rdy -->
-        <section class="p-5" id="btech3">
+        <section class="" id="btech3">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 3rd year</h2>
@@ -472,10 +474,11 @@
 
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- Boxes Btech 4th y -->
-        <section class=" p-5" id="btech4">
+        <section class=" " id="btech4">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 4th year</h2>
@@ -557,28 +560,29 @@
 
                     </div>
                 </div>
+            </div>
         </section>
+    </div>
+
+
+    <footer class="p-5 bg-dark text-white text-center position-relative" id="learnaboutus">
+        <div class=" container ">
+
+
+            <p>
+                This website is created by CodeBotx.
+            </p>
         </div>
+        <p class="lead ">Copyright &copy; 2021 Anubhab Patnaik</p>
 
+        <a href="# " class="position-absolute bottom-0 end-0 p-5 ">
+            <i class="bi bi-arrow-up-circle h1 "></i>
+        </a>
+        </div>
+    </footer>
 
-        <footer class="p-5 bg-dark text-white text-center position-relative" id="learnaboutus">
-            <div class=" container ">
-
-
-                <p>
-                    This website is created by CodeBotx.
-                </p>
-            </div>
-            <p class="lead ">Copyright &copy; 2021 Anubhab Patnaik</p>
-
-            <a href="# " class="position-absolute bottom-0 end-0 p-5 ">
-                <i class="bi bi-arrow-up-circle h1 "></i>
-            </a>
-            </div>
-        </footer>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous ">
-        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous ">
+    </script>
 
 </body>
 
