--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container-fluid ">
         <h1 class="display-4 text-center text-dark mt-2">Notes.SIT- B.Tech</h1>
         <!-- Boxes Btech 1sty -->
-        <section class=" " id="btech1">
+        <section class=" p-2" id="btech1">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 1st year</h2>
@@ -159,7 +159,7 @@
             </div>
         </section>
         <!-- Boxes Btech 2ndy -->
-        <section class="  " id="btech2">
+        <section class=" p-2 " id="btech2">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary  ">B.TECH 2nd year</h2>
@@ -393,7 +393,7 @@
         </section>
 
         <!-- Boxes Btech 3rdy -->
-        <section class="" id="btech3">
+        <section class=" p-2" id="btech3">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 3rd year</h2>
@@ -478,7 +478,7 @@
         </section>
 
         <!-- Boxes Btech 4th y -->
-        <section class=" " id="btech4">
+        <section class="p-2 " id="btech4">
             <div class="container">
                 <div class="row text-center g-4">
                     <h2 class="text-center text-secondary ">B.TECH 4th year</h2>
