--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
 
             <p>
-                This website is created by <a href="https://github.com/codebotx/sit-notes" style="text-decoration: none;" target="blank">CodeBotx.</a>
+                This website is created by <a class="text-white " href="https://github.com/codebotx/sit-notes" style="text-decoration: none;" target="blank">CodeBotx.</a>
 
 
 
